--- a/src/components/map/map.module.css
+++ b/src/components/map/map.module.css
@@ -1,113 +1,14 @@
-.container {
+
+[data-theme="dark"] :global(.sigma-container) {
+    background-color: var(--bs-body-bg);
+}
+
+ .container {
     width: 100%;
     height: 100%;
-    user-select: none;
     position: relative;
 }
-.img {
-    width: 32px;
-    height: 32px;
-    opacity: 1;
-}
-.node {
-    font-size: 14px;
-    cursor: pointer;
-}
 
-.link {
-    stroke: #999;
-    stroke-opacity: 1;
-}
-
-.linkLabel {
-    text-anchor: middle;
-    pointer-events: none;
-    font-size: 10px;
-    fill: black;
-    flood-color: #FFFFFF;
-    flood-opacity: 1;
-}
-[data-theme="dark"] .linkLabel {
-    fill: white;
-}
-
-.links {
-    -custom-noop: noop;
-}
-
-.nodes {
-    -custom-noop: noop;
-}
-
-.EndDevice {
-    fill: green;
-    color: green;
-}
-.EndDevice > circle {
-    stroke: green;
-}
-.Coordinator {
-    stroke: #fff;
-    stroke-width: 2px;
-}
-.Coordinator text {
-    display: none;
-
-}
-.Router,
-.Coordinator {
-    fill: blue;
-    color: blue;
-}
-
-[data-theme="dark"] .Router,
-[data-theme="dark"] .Coordinator {
-    color: #3f80ea;
-    fill: #3f80ea;
-}
-
-.Router > circle,
-.Coordinator > circle {
-    stroke: blue;
-}
-
-.BrokenLink {
-    stroke: red;
-    stroke-dasharray: 15;
-}
-.Coordinator2Router,
-.Router2Coordinator {
-    stroke: blue;
-}
-
-.Router2Router {
-    stroke: blue;
-    stroke-dasharray: 5;
-}
-.Coordinator2EndDevice,
-.EndDevice2Coordinator {
-    stroke: green;
-}
-
-.Router2EndDevice,
-.EndDevice2Router {
-    stroke: green;
-    opacity: 0.8;
-    stroke-dasharray: 5;
-}
-
-.foreignObject {
-    overflow: visible;
-    width: 100%;
-    height: 100%;
-}
-
-.offline {
-    opacity: 0.5 !important;
-    stroke: gray;
-}
-
-.controls {
+ .controls {
     position: absolute;
-    right: 0;
 }
